Fixed layout problem on front page

--- a/intermine/webapp/main/resources/webapp/css/begin.css
+++ b/intermine/webapp/main/resources/webapp/css/begin.css
@@ -1,7 +1,7 @@
 div#leftcolumn {
     float:left;
 }
-div#rightcolumn {
+div#rightColumn {
 	margin-left:340px; padding-top:0px;	_margin-top:15px;/* IE Only Hack */	margin-right:0px;}
 	
 div.aspectOverview{
